# cw_habits_drf

./: .env.sample  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
fixtures/: habit_fix.json  user_fix.json
habits/: models.py  services.py  sesrializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
